add core dependencies (SDL3, glad, glm)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,20 @@ project(MyProject CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+add_subdirectory(external/SDL3)
+add_subdirectory(external/glm)
+add_subdirectory(external/glad)
+
+# ---------- Our Source ----------
 add_executable(${PROJECT_NAME}
-        app/main.cpp
+    app/main.cpp
+)
+
+# ---------- Link everything ----------
+target_link_libraries(${PROJECT_NAME}
+    SDL3::SDL3
+    glad
+    glm
 )
