--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "external/SDL_mixer"]
 	path = external/SDL_mixer
 	url = https://github.com/libsdl-org/SDL_mixer.git
+[submodule "external/glad"]
+	path = external/glad
+	url = https://github.com/wismh/glad.git
