--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,3 +1,6 @@
+cmake_minimum_required(VERSION 3.15)
+project(game LANGUAGES CXX C)
+
 add_executable(${PROJECT_NAME}
     include/game/game.h
     include/game/utils.h
@@ -28,3 +31,11 @@ add_executable(${PROJECT_NAME}
 
 target_link_libraries(${PROJECT_NAME} engine)
 target_include_directories(${PROJECT_NAME} PRIVATE include)
+
+add_custom_command(
+    TARGET ${PROJECT_NAME}
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/assets
+    $<TARGET_FILE_DIR:${PROJECT_NAME}>/assets
+)
