--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(engine CXX)
+project(engine LANGUAGES CXX C)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -19,23 +19,28 @@ add_library(${PROJECT_NAME} STATIC
     include/engine/render/commands.h
     include/engine/render/irender_backend.h
     include/engine/render/icanvas.h
-    include/engine/render/igraphic_fabric.h
+    include/engine/render/igraphic_factory.h
     include/engine/render/backends/opengl/opengl_canvas.h
     include/engine/render/backends/opengl/opengl_render.h
+    include/engine/render/igpu_mesh.h
+    include/engine/render/ishader.h
+    include/engine/render/backends/opengl/opengl_factory.h
+    include/engine/render/camera.h
+    include/engine/render/itexture.h
+    include/engine/render/backends/opengl/opengl_texture.h
+    include/engine/render/backends/opengl/opengl_shader.h
+    include/engine/render/backends/opengl/opengl_factory.h
+    include/engine/render/camera.h
+    include/engine/render/itexture.h
+    include/engine/render/backends/opengl/opengl_texture.h
+    include/engine/render/backends/opengl/opengl_shader.h
+    include/engine/render/backends/opengl/opengl_mesh.h
     include/engine/resources/resource_pipe.h
     include/engine/core/igame.h
     include/engine/resources/mesh_desc.h
     include/engine/resources/mesh_pipe.h
-    include/engine/render/igpu_mesh.h
-    include/engine/render/ishader.h
-    include/engine/render/backends/opengl/opengl_mesh.h
-    include/engine/resources/shader_desc.h
-    include/engine/render/backends/opengl/opengl_shader.h
     include/engine/resources/resource_create_exception.h
-    include/engine/render/backends/opengl/opengl_fabric.h
-    include/engine/render/camera.h
-    include/engine/render/itexture.h
-    include/engine/render/backends/opengl/opengl_texture.h
+    include/engine/resources/shader_desc.h
     include/engine/resources/texture_desc.h
     include/engine/resources/texture_pipe.h
     include/engine/resources/shader_pipe.h
@@ -57,7 +62,6 @@ add_library(${PROJECT_NAME} STATIC
     include/engine/ui/label.h
     include/engine/ui/ui_canvas.h
     include/engine/ui/layout.h
-    include/engine/ui/ui_canvas.cpp
     include/engine/resources/ui_image.h
     include/engine/resources/ui_image_pipe.h
     include/engine/core/application_state.h
@@ -67,7 +71,7 @@ add_library(${PROJECT_NAME} STATIC
 
     src/render/command_buffer.cpp
     src/render/backend/opengl/opengl_canvas.cpp
-    src/render/backend/opengl/opengl_fabric.cpp
+    src/render/backend/opengl/opengl_factory.cpp
     src/render/backend/opengl/opengl_mesh.cpp
     src/render/backend/opengl/opengl_render.cpp
     src/render/backend/opengl/opengl_shader.cpp
@@ -86,6 +90,9 @@ add_library(${PROJECT_NAME} STATIC
     src/resources/shader_pipe.cpp
     src/resources/texture_pipe.cpp
     src/resources/ui_image_pipe.cpp
+    src/ui/layout.cpp
+    src/ui/ui_canvas.cpp
+        src/ui/label.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
@@ -96,7 +103,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 )
 
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-    ASSETS_PATH="${CMAKE_SOURCE_DIR}/assets"
+    ASSETS_PATH="./assets"
 )
 
 target_link_libraries(${PROJECT_NAME} PUBLIC
